# Vigil

./: .gitignore  CLAUDE.md  README.md  TODO.md  app_launcher.py  assistant.py  brand.py  compositor.py  config.py  database.py  file_search.py  first_run.py  folders.py  hotkey.py  hotkey_kglobalaccel.py  injector.py  install.sh  json_repair.py  llm_backend.py  llm_manager.py  locales.py  logger.py  main.py  notes_window.py  notifier.py  obsidian.py  platform_linux.py  pyproject.toml  recorder.py  service.py  settings_window.py  setup.py  setup_utils.py  theme.py  tray_icon.py  tray_qt.py  tts.py  uninstall.sh  update.sh  url_shortcuts.py  (+3 more)
.superpowers/brainstorm/67711-1776426302/content/: answer-card-variants.html  position-options.html  ui-states-overview.html
.superpowers/brainstorm/67711-1776426302/state/: server-stopped
docs/superpowers/plans/: 2026-04-17-backend-setup-improvements.md  2026-04-17-overlay-ui.md  2026-04-17-tts.md
docs/superpowers/specs/: 2026-04-17-backend-setup-improvements-design.md  2026-04-17-overlay-ui-design.md  2026-04-17-tts-design.md
hotkey/: __init__.py  base.py  gnome.py  hyprland.py  kde.py  manual.py  niri.py  sway.py  x11.py
tests/: test_brand.py  test_compositor.py  test_hotkey_adapters.py  test_hotkey_gnome.py  test_llm_manager.py  test_locales.py  test_setup_detect.py  test_setup_utils.py  test_theme.py  test_tts.py
