[project]
name = "vigil"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "customtkinter>=5.2.0",
    "pynput>=1.7.6",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "ddgs>=9.0",
    "pyperclip>=1.8.2",
    "dbus-python>=1.3.2",
    "PyGObject>=3.42.0",
    "huggingface-hub>=0.23.0",
    "PyQt6>=6.4.0",
    "jeepney>=0.8.0",
]

[project.scripts]
vigil = "main:main"
vigil-trigger = "vigil_trigger:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

# Flat layout with a `hotkey/` package + `img/` asset dir confuses
# setuptools auto-discovery ("Multiple top-level packages discovered").
# Pin the included packages + explicitly list top-level modules so
# `uv sync` can always rebuild the editable install.
[tool.setuptools]
py-modules = [
    "main", "app_launcher", "assistant", "brand", "compositor", "config",
    "database", "first_run", "injector", "json_repair", "llm_backend",
    "llm_manager", "locales", "logger", "obsidian", "platform_linux",
    "recorder", "service", "settings_window", "setup_utils", "theme",
    "transcriber", "tray_qt", "tts", "vigil_trigger", "widget",
]

[tool.setuptools.packages.find]
include = ["hotkey*"]
exclude = ["img*", "tests*", "docs*"]

[project.optional-dependencies]
tts-piper = ["piper-tts"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
